--- a/indext_v2.html
+++ b/indext_v2.html
@@ -56,7 +56,7 @@
         <span class="icon">⚠️</span>
         <h1>الخدمة متوقفة مؤقتاً</h1>
         <p>
-            تم إيقاف هذا الموقع مؤقتاً بسبب عدم تسوية المستحقات المالية الخاصة بالتطوير أو الاستضافة.
+            تم إيقاف هذا الموقع مؤقتاً بسبب عدم تسوية المستحقات المالية الخاصة بالتطوير أو الاستضافة. يرجى الحذر من التعامل مع الشخص نظرا لعدم جديته في التعامل مع الاشخاص
         </p>
         <p>
             إذا كنت مالك هذا الموقع، يرجى التواصل مع المطور فوراً لاستعادة الخدمة.
