--- a/indext_v2.html
+++ b/indext_v2.html
@@ -54,7 +54,7 @@
 
     <div class="container">
         <span class="icon">⚠️</span>
-        <h1>الخدمة متوقفة مؤقتاً</h1>
+        <h1>الخدمة متوقفة مؤقتاً - تحذير من النصب منصة رواق</h1>
         <p>
             تم إيقاف هذا الموقع مؤقتاً بسبب عدم تسوية المستحقات المالية الخاصة بالتطوير أو الاستضافة. يرجى الحذر من التعامل مع الشخص نظرا لعدم جديته في التعامل مع الاشخاص
         </p>
